--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+/*:root{
     --main:#826E6E;
     --alt:#D98888;
     --tert:#000000;
@@ -15,7 +15,7 @@ html{
 body{
     color: white;
     font-family: Cambria, Georgia, serif;
-    background: url(img/image.jpg);
+    background: grey;
     background-size: contain;
     list-style: none;
     font-size: 1rem;
@@ -33,7 +33,7 @@ body{
 .portfolio{
     /*display: grid;
     grid-gap: 20px;*/
-    background-color: var(--main);
+/*    background-color: var(--main);
     grid-area: 1/1;
 }
 
@@ -46,10 +46,10 @@ body{
     background: var(--tert);
     color: white;
     grid-area: 3/1;
-    /*display: grid;
+    display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-*/}
+}
 
 .list{
     list-style: none;
@@ -87,13 +87,113 @@ body{
     color: white;
     max-width:100%;
 }
+*/
+
+/*layout*/
+
+html{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background: url(image.jpg);
+    font-family: Constantia, Palatino, 'Palatino Linotype',  'Palatino LT STD', Georgia, serif;
+    font-weight: 500;
+}
+
+body h1{
+    font-family: Cambria, Georgia, serif;
+
+    display: inline-block;
+}
+
+body h1:hover,
+body h1:focus
+{
+    border-bottom: 2px solid black;
+    background: white;
+}
+
+header{
+    background: #D9B3F4;
+    display: flex;
+    flex-direction: column;
+}
+
+header a{
+    text-decoration: none;
+    color: black;
+}
+header a:hover{
+    color: #0E4B0F;
+    border: .125em solid black;
+    border-radius: 10px;
+}
+
+.top-container-a{
+    border:2px solid green;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.top-container-b{
+    background: url(image.jpg);
+    background-image: cover;
+}
+
+.main-nav-list{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 2px solid red;
+    margin-bottom: :2em 0;
+    background: #AD9BB5;
+}
+
+.bio{
+    border: 2px solid red;
+    /*font-weight: 500;*/
+    padding: 2rem;
+}
+
+.project{
+    border: 2px solid green;
+    /*font-weight: 400;*/
+    padding: 2rem;
+}
+
+.project-info-list{
+    list-style: none;
+    font: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2em;
+    border: 2px solid black;
+}
+
+.contact{
+    border: 2px solid red;
+    /*font-weight: 500;*/
+    padding: 2rem;
+}
+
+@media (min-width: 650px){
 
 
+    .main-nav-list{
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 2em;
+        border-spacing: unset;
+    }
 
-
-
-
-
-
-
-
+    .project-info-list{
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: center;
+    }
+}
