--- a/style.css
+++ b/style.css
@@ -1,93 +1,3 @@
-/*:root{
-    --main:#826E6E;
-    --alt:#D98888;
-    --tert:#000000;
-}
-
-
-
-html{
-    margin: 0px;
-    padding: 0px;
-
-}
-
-body{
-    color: white;
-    font-family: Cambria, Georgia, serif;
-    background: grey;
-    background-size: contain;
-    list-style: none;
-    font-size: 1rem;
-    display: grid;
-    grid-template-columns: (200px, 1fr);
-    grid-template-rows: (150px, 1fr);
-    grid-gap: 20px;
-    text-align:  center;
-    align-items: center;
-    justify-content: center;
-    grid-area: 2rem;
-    padding: 0.8rem;
-}
-
-.portfolio{
-    /*display: grid;
-    grid-gap: 20px;*/
-/*    background-color: var(--main);
-    grid-area: 1/1;
-}
-
-.bio{
-    background-color: var(--alt);
-    grid-area: 2/1
-}
-
-.project{
-    background: var(--tert);
-    color: white;
-    grid-area: 3/1;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-.list{
-    list-style: none;
-    grid-area: 4/1;
-    display: flex;
-    justify-content: space-around;
-    min-width: 3rem;
-
-    flex-direction: row;
-    text-decoration: none;
-    width:100%;
-}
-
-.btn1{
-    color: var(--tert);
-    background-color: var(--main);
-    padding: 0.6rem 1.3rem;
-    text-decoration: none;
-    border: 0;
-    grid-template-columns: repeat(auto-fit , minmax(200px,1fr));
-}
-
-.btn2{
-    color: var(--tert);
-    background-color: var(--main);
-    padding: 0.6rem 1.3rem;
-    text-decoration: none;
-    border: 0;
-    grid-template-columns: repeat(auto-fit , minmax(200px,1fr));
-}
-
-.contact{
-    grid-area: 5/1;
-    background-color: var(--alt);
-    color: white;
-    max-width:100%;
-}
-*/
 
 /*layout*/
 
@@ -132,7 +42,7 @@ header a:hover{
 }
 
 .top-container-a{
-    border:2px solid green;
+   /*border:2px solid green;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -148,19 +58,19 @@ header a:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     margin-bottom: :2em 0;
     background: #AD9BB5;
 }
 
 .bio{
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     /*font-weight: 500;*/
     padding: 2rem;
 }
 
 .project{
-    border: 2px solid green;
+    /*border: 2px solid green;*/
     /*font-weight: 400;*/
     padding: 2rem;
 }
@@ -172,11 +82,11 @@ header a:hover{
     flex-direction: column;
     justify-content: space-between;
     padding: 2em;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
 }
 
 .contact{
-    border: 2px solid red;
+    /*border: 2px solid red;*/
     /*font-weight: 500;*/
     padding: 2rem;
 }
