--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*site designed by Manishdas1975.github.io for personal work*/
+/*only html and css used in making the site. 1st attempt at */
+/*making a mobile first website.*/
 
 /*layout*/
 
@@ -6,51 +9,18 @@ html{
     padding: 0;
 }
 
-body{
-    background: url(image.jpg);
-    font-family: Constantia, Palatino, 'Palatino Linotype',  'Palatino LT STD', Georgia, serif;
-    font-weight: 500;
-}
-
-body h1{
-    font-family: Cambria, Georgia, serif;
-
-    display: inline-block;
-}
-
-body h1:hover,
-body h1:focus
-{
-    border-bottom: 2px solid black;
-    background: white;
-}
-
 header{
     background: #D9B3F4;
     display: flex;
     flex-direction: column;
-}
 
-header a{
-    text-decoration: none;
-    color: black;
-}
-header a:hover{
-    color: #0E4B0F;
-    border: .125em solid black;
-    border-radius: 10px;
 }
 
 .top-container-a{
-   /*border:2px solid green;*/
+    /*border:2px solid green;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.top-container-b{
-    background: url(image.jpg);
-    background-image: cover;
 }
 
 .main-nav-list{
@@ -65,13 +35,11 @@ header a:hover{
 
 .bio{
     /*border: 2px solid red;*/
-    /*font-weight: 500;*/
     padding: 2rem;
 }
 
 .project{
     /*border: 2px solid green;*/
-    /*font-weight: 400;*/
     padding: 2rem;
 }
 
@@ -87,9 +55,49 @@ header a:hover{
 
 .contact{
     /*border: 2px solid red;*/
-    /*font-weight: 500;*/
     padding: 2rem;
 }
+
+/*setting up image and font style*/
+
+body{
+    background: url(image.jpg);
+    font-family: Constantia, Palatino, 'Palatino Linotype',  'Palatino LT STD', Georgia, serif;
+    font-weight: 500;
+}
+
+.top-container-b{
+    background: url(image.jpg);
+    background-image: cover;
+}
+
+/*heading 1 representation*/
+
+body h1{
+    font-family: Cambria, Georgia, serif;
+    display: inline-block;
+}
+
+body h1:hover,
+body h1:focus
+{
+    border-bottom: 2px solid black;
+    background: white;
+}
+
+/*creating link for page sections at top of the page*/
+
+header a{
+    text-decoration: none;
+    color: black;
+}
+header a:hover{
+    color: #0E4B0F;
+    border: .125em solid black;
+    border-radius: 10px;
+}
+
+/*creating media queries for the site in desktop mode*/
 
 @media (min-width: 650px){
 
