--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body{
     background: url(image.jpg);
     font-family: Constantia, Palatino, 'Palatino Linotype',  'Palatino LT STD', Georgia, serif;
     font-weight: 500;
+    color:black;
 }
 
 .top-container-b{
