--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header{
 
 body{
     background: url(image.jpg);
-    color:#6a856b;
+    color:#2d3c2e;
     font-family: Constantia, Palatino, 'Palatino Linotype',  'Palatino LT STD', Georgia, serif;
     font-weight: 500;
     
